src/styles/Home.css
header {
    position: relative;
    z-index: 2;
    height: 100vh;
    width: 100%;
    background-image: linear-gradient(to bottom, rgba(2,2,2,0.12), rgba(2,2,2,0.12)), url("../images/header-pic.jpg");
    background-position: center;
    background-repeat: no-repeat;
    top: 0;
    left: 0;
    background-size: cover;
}

.headerContent {
    position: relative;
    top: 4rem;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 13%;

}

h1 {
    font-size: 6rem;
    font-family: librefranklinbold;
    text-align: center;
    padding: 1.5rem;
}

h4 {
    font-size: 1.3rem;
    font-family: ibmplexmono;
    text-align: center;
    padding: 1.5rem;
}

.homeContent {
    position: relative;
    z-index: 2;
    text-align: center;
    color: rgb(157, 157, 157);
}

.section-container {
    padding: 0 13% 5% 13%;
}

.home-motto {
    text-align: center;
    font-size: 2rem;
    color: rgb(157, 157, 157);
    padding: 10% 0;
}

span {
    font-family: librefranklinbold;
    color: black;
}

.flex-box {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;
    justify-content: center;
}

.flex-item {
    display: flex;
    flex-direction: column;
    width: 29%;
    position: relative;
    margin: 1rem;
}

.step {
    font-family: librefranklinbold;
    font-size: 1.3rem;
    color: black;
    text-align: left;
    padding: 1rem 0;
}

.description {
    font-family: ibmplexmono;
    color: rgb(157, 157, 157);
    text-align: left;
}


.gallery-image {
    max-width: 100%;
}

.dot-container {
    text-align: center;
}

.slideshow{
    /*overflow-x: hidden;*/
    padding: 10% 0 0 0;
}

.slideshow-container {
    width: 100%;
    position: relative;
    margin: auto;
}
  
  /* Hide the images by default */
.mySlides {
    display: none;
}
  
/* Next & previous buttons */
.prev, .next {
    cursor: pointer;
    position: absolute;
    top: 50%;
    width: auto;
    margin-top: -22px;
    padding: 16px;
    color: white;
    font-weight: bold;
    font-size: 18px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
    user-select: none;
}

.prev {
    left: 0;
    border-radius: 3px 0 0 3px;
}
  
/* Position the "next button" to the right */
.next {
    right: 0;
    border-radius: 3px 0 0 3px;
}
  
/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
    background-color: rgba(0,0,0,0.8);
}
  
/* Caption text */
.text {
    color: #f2f2f2;
    font-size: 15px;
    padding: 8px 12px;
    position: absolute;
    bottom: 8px;
    width: 100%;
    text-align: center;
}
  
/* Number text (1/3 etc) */
.numbertext {
    color: #f2f2f2;
    font-size: 12px;
    padding: 8px 12px;
    position: absolute;
    top: 0;
}
  
  /* The dots/bullets/indicators */
.dot {
    cursor: pointer;
    height: 10px;
    width: 10px;
    margin: 0 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
}
  
.active, .dot:hover {
    background-color: #717171;
}
  
/* Fading animation */
.fade {
    -webkit-animation-name: fade;
    -webkit-animation-duration: 1.5s;
    animation-name: fade;
    animation-duration: 1.5s;
}
  
@-webkit-keyframes fade {
    from {opacity: .4}
    to {opacity: 1}
}
  
@keyframes fade {
    from {opacity: .4}
    to {opacity: 1}
}

@media only screen and (max-width: 1100px) {

    .flex-item {
        display: flex;
        flex-direction: column;
        width: 100%;
        position: relative;
        margin: 1rem;
    }
}

@media only screen and (max-width: 800px) {
    .headerContent {
        top: 2rem;
    
    }

    h1 {
        font-size: 3.7rem;
        padding: 0.5rem;
    }
    
    h4 {
        font-size: 1rem;
        padding: 0.5rem;
    }

    .home-motto {
        text-align: center;
        font-size: 1.4rem;
        color: rgb(157, 157, 157);
        padding: 10% 0;
    }
}

